@@ -100,8 +100,7 @@ static apr_status_t socket_read(apr_bucket *a, const char **str,
     if (*len > 0) {
         apr_bucket_heap *h;
         /* Change the current bucket to refer to what we read */
-        /* XXX: check for failure? */
-        a = apr_bucket_heap_make(a, buf, *len, 0, NULL);
+        a = apr_bucket_heap_make(a, buf, *len, 0);
         h = a->data;
         h->alloc_len = APR_BUCKET_BUFF_SIZE; /* note the real buffer size */
         *str = buf;
